# dream_solver

./: .buildinfo  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  conf.py  genindex.html  index.html  index.rst  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.py  test.py
.doctrees/: environment.pickle  index.doctree
_sources/: index.rst.txt
_static/: custom.css  webgui.js
basics/: conservative.html  navierstokes.html  setofvariables.html
benchmarks/: cylinder.py  template.py
code/: HDGSolver.py  boundary_conditions.py  configuration.py  flow_utils.py  hdg_solver.py  time_schemes.py
contents/: installation.html  usage.html
docs/: .buildinfo  .make_docu  README.html  conf.py  genindex.html  index.html  index.rst  installation.html  installation.md  latex_macros.py  macros.py  objects.inv  py-modindex.html  search.html  searchindex.js
dream/: .config.py.swp  .pde.py.swp  .solver.py.swp  IO.py  \  __init__.py  _configuration.py  _version.py  bla.py  boundary_conditions.py  conditions.py  config.py  configuration.py  crs.py  formulation.py  hdg_solver.py  incompressible.py  incompressible_solution.py  io.py  mesh.py  pde.py  region.py  sensor.py  solver.py  state.py  time.py  time_schemes.py  viscosity.py
examples/: cavity.py  couette.py  cylinder.py  cylinder_mesh.ipynb  euler_around_naca.ipynb  flat_plate.py  gaussian_hill_farfield.ipynb  geometries.py  imex_vortex.ipynb  isentropic_vortex.ipynb  load_solution.py  meshes.py  planar_acoustic_pulse.ipynb  pressure_pulse_2d.ipynb  pulse.py  quick_start_compressible.ipynb  quick_start_scalar_transport.ipynb  (+7 more)
(+689 files in other folders)
